flicker fix

--- a/styles/modules/components/homeTemplate.module.scss
+++ b/styles/modules/components/homeTemplate.module.scss
@@ -7,11 +7,19 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
+    -webkit-transform: translateZ(0);
+    -moz-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    -o-transform: translateZ(0);
+    transform: translateZ(0);
     transition: transform 0.25s ease-in-out, box-shadow 0.25s ease-in-out;
-    will-change: auto;
-
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -ms-backface-visibility: hidden;
+    
     &:hover {
         transform: translate(0, -1rem);
+        -webkit-transform: translate(0, -1rem);
         box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 16px 0px;
     }
 }
